typesense/components/typesense/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    argocd.argoproj.io/sync-wave: '1'
  name: <CLUSTER_NAME>-typesense
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: typesense.<DOMAIN_NAME>
      http:
        paths:
          - backend:
              service:
                name: typesense-svc
                port:
                  number: 8108
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - typesense.<DOMAIN_NAME>
      secretName: typesense-tls
